fix responsive footer. section location, fix letter-spacing

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -14,9 +14,7 @@
     background-color: $darkslateblue;
     border-color: $darkslateblue;
     line-height: .9;
-    letter-spacing: -.2%;
-
-
+    letter-spacing: -0.002em;
   }
 
   &_medium {
