--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -9,7 +9,7 @@
   }
 
   &__bg {
-    background-image: linear-gradient(#568bf3, $darkslateblue);
+    background-image: linear-gradient(180deg, #79CDE1 -34.78%, #272884 105.16%);
     padding-top: 28px;
     padding-bottom: 28px;
     padding-left: 47px;
@@ -23,21 +23,24 @@
     flex-direction: column;
     justify-content: center;
     font-weight: 700;
-
+    width: 30%;
     &_phone {
       text-align: right;
-      width: 30%;
       padding-right: 30px;
     }
 
-    &_mail_ {
-      font-weight: 600;
-      width: 70%;
+    &_mail {
+      font-weight: 500;
     }
 
     &__link {
       display: inline-block;
       text-transform: lowercase;
+
+      &:hover,
+      &:focus {
+        text-decoration: underline;
+      }
     }
   }
 
@@ -54,23 +57,30 @@
       max-width: 147px;
     }
   }
-
+@include respond-to($md){
+  .contacts{
+    width: 50%;
+  }
+  .footer__logo{
+    max-width: 130px;
+  }
+}
   @include respond-to($sm) {
-    font-size: 10px;
     &__bg {
-      padding: 15px 20px;
+      padding: 15px 10px;
       flex-wrap: wrap;
+      justify-content: space-around;
     }
     .contacts {
-      width: 50%;
       line-height: 2;
       text-align: center;
       padding: 0;
+      width: auto;
+      flex-grow: 0;
+      margin-bottom: 10px;
 
       &_phone {
         order: 1;
-        text-align: left;
-        padding-left: 30px;
       }
     }
     .wrap-logo {
@@ -88,7 +98,7 @@
       width: 100%;
       order: 1;
       text-align: center;
-      padding-top: 28px;
+      padding-top: 18px;
 
       .btn {
         background-color: $white;
@@ -96,6 +106,15 @@
         font-size: 12px;
         padding: 11px 18px;
       }
+    }
+  }
+
+  @include respond-to($xs) {
+    .footer__logo {
+      max-width: 111px;
+    }
+    .contacts {
+      letter-spacing: -0.002em;
     }
   }
 }
