--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -40,7 +40,7 @@
     color: $darkslateblue;
     font-size: 18px;
     font-weight: 700;
-    letter-spacing: -.2%;
+    letter-spacing: -0.002em;
     line-height: 1.33;
   }
 
