--- a/src/scss/layout/sections/section-clearing.scss
+++ b/src/scss/layout/sections/section-clearing.scss
@@ -68,7 +68,7 @@
         background-color: transparent;
         border: 1px solid $white;
         line-height: .9;
-        letter-spacing: 0.2px;
+        letter-spacing: -0.002em;
         padding: .82em .65em;
         font-size: 16px;
         color: $white;
