--- a/src/scss/layout/sections/section-faq.scss
+++ b/src/scss/layout/sections/section-faq.scss
@@ -10,7 +10,7 @@
     color: $dark;
   }
 
-  .block-btn-open {
+  .other-questions {
     position: relative;
     margin-top: 35px;
     padding-top: 40px;
@@ -28,7 +28,19 @@
       background-image: linear-gradient(#F9FBFF 50%, #D6E3FF 50%);
     }
   }
-
+  @include respond-to($md) {
+    .accordion{
+      padding-top: 65px;
+      padding-bottom: 30px;
+    }
+    .panel__heading {
+      padding: 15px 32px 15px 0;
+      cursor: pointer;
+    }
+    .other-questions{
+      padding-top: 30px;
+    }
+  }
   @include respond-to($sm) {
     .container {
       padding: 0;
@@ -43,17 +55,17 @@
       }
 
       .open-panel {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
         top: 17%;
 
         &:before {
-          width: 12px;
-          height: 12px;
+          width: 10px;
+          height: 10px;
         }
       }
     }
-    .block-btn-open {
+    .other-questions {
       padding-top: 25px;
     }
     .panel-collapse {
@@ -61,6 +73,16 @@
     }
     .panel-collapse__body p {
       font-size: 12px;
+    }
+  }
+  @include respond-to($xs){
+    .accordion{
+      .open-panel{
+        display: none;
+      }
+      .panel__heading{
+        padding-right: 0;
+      }
     }
   }
 }
