--- a/src/scss/layout/sections/section-location.scss
+++ b/src/scss/layout/sections/section-location.scss
@@ -17,13 +17,22 @@
       height: 100%;
     }
   }
+  @include respond-to($lg){
+    .wrap-map{
+      padding-top: 46%;
+    }
+  }
+  @include respond-to($md){
+    .wrap-map{
+      padding-top: 55%;
+    }
+  }
   @include respond-to($sm){
     .container{
       padding: 0;
     }
     .wrap-map{
-      padding-top: 55%;
-      border-radius: 0;
+       border-radius: 0;
     }
   }
 }
